--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "cookie": "^0.5.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "prisma": "^4.16.2",
@@ -23,6 +25,8 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "daisyui": "^3.1.7"
   }
 }
