--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "cookie": "^0.5.0",
+    "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
